--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ requires = ["setuptools >= 61.0"]
 build-backend = "setuptools.build_meta"
 
 [project]
-name = "pysb-units"
+name = "pharmacodynamic"
 dynamic = ["version"]
 requires-python = ">= 3.8"
 dependencies = []
@@ -39,13 +39,6 @@ classifiers = [
 Repository = "https://github.com/Borealis-BioModeling/pharmacodynamic-response-models"
 Issues = "https://github.com/Borealis-BioModeling/pharmacodynamic-response-models/issues"
 Changelog = "https://github.com/Borealis-BioModeling/pharmacodynamic-response-models/CHANGELOG.md"
-
-# Find namespace package
-[tool.setuptools.packages.find]
-where = ["./"]
-include = ["pharmacodynamic",
-           ]
-namespaces = true
 
 # Set the dynamic version
 [tool.setuptools.dynamic]
